objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Ag2Ag_ID__c</fullName>
        <externalId>true</externalId>
        <label>BusinessLink ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>IF(Related_External_User__r.Corporate__c,&apos;Corporate;&apos;,&apos;&apos;) + IF(Related_External_User__r.lol__c,&apos;Dairy;&apos;,&apos;&apos;)  + 
IF(Related_External_User__r.purina__c,&apos;Purina;&apos;,&apos;&apos;) + IF(Related_External_User__r.seed__c,&apos;WinField&apos;,&apos;&apos;) +  IF( Related_External_User__r.FGI__c , &apos;FGI&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ex_Username__c</fullName>
        <externalId>true</externalId>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <formula>Related_External_User__r.InactiveDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsMassLoaded__c</fullName>
        <formula>Related_External_User__r.IsMassLoaded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsMassLoaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserActive__c</fullName>
        <formula>Related_External_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <formula>TEXT(Related_External_User__r.JobClassification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <formula>Related_External_User__r.Last_Access_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Access Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Phone__c</fullName>
        <label>Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_App__c</fullName>
        <label>Referring App</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reffered_By__c</fullName>
        <label>Reffered By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <formula>Related_External_User__r.Registration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_External_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related External User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_City__c</fullName>
        <label>Retailer City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Name__c</fullName>
        <label>Retailer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Number__c</fullName>
        <label>Retailer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_State__c</fullName>
        <label>Retailer State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ALL</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>Farmer_Registration</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Ag2Ag_ID__c</columns>
        <columns>Registration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Function__c</field>
            <operation>contains</operation>
            <value>Farmer</value>
        </filters>
        <filters>
            <field>IsUserActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Farmer Registration</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>Ag2Ag_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Business_Unit__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Unverified_Emails</fullName>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Job_Function__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Verified__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Job_Function__c</field>
            <operation>contains</operation>
            <value>Farmer</value>
        </filters>
        <label>Unverified Emails</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>